--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 body{
   background-color: #262626;
   margin: 0%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,13 +45,15 @@ body{
 .chat-window {
   border: 10px solid #161616;
   border-radius: 17px;
-  font-size: 3rem;
   margin-bottom: 200px;
   box-shadow: 15px 15px 5px;
   background-color: #228F63;
 }
 
 .chat-header {
+  font-size: 2.5vw;
+  font-weight: bold;
+  text-align: center;
   padding: 1px 15px;
   position: relative;
   top: 0;
@@ -66,13 +68,19 @@ body{
 
 .chat-body{
   width: 40vw;
-  height: 35vw;
+  height: 25vw;
   flex-grow: 1;
+  overflow: scroll;
+  direction:ltr;
+  overflow-x: hidden;
+}
+
+.message{
+  overflow: hidden
 }
 
 #you {
   display: inline-block;
-  font-size: 30px;
   margin-left: 55%;
   padding-left: 25px;
   border-radius: 45px;
@@ -81,7 +89,7 @@ body{
 #you .message-content{
   display: inline-block;
   background-color: #658FB2;
-  font-size: 30px;
+  font-size: 1.3vw;
   padding-left: 25px;
   padding-right: 50px;
   border-radius: 45px;
@@ -96,7 +104,7 @@ body{
   display: inline-block;
   margin-left: 5px;
   background-color: #073357;
-  font-size: 30px;
+  font-size: 1.3vw;
   padding-left: 25px;
   padding-right: 50px;
   border-radius: 45px;
@@ -113,7 +121,7 @@ body{
 
 .rooms{
   width: 20vw;
-  font-size: 35px;
+  font-size: 3vw;
   background-color: #10764D;
 }
 
@@ -139,4 +147,8 @@ body{
 
 .chat-footer button:hover{
   box-shadow: 4px 4px 15px;
+}
+
+.messageDiv{
+  background-color: purple;
 }
