Fixed the css so it fits

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -216,4 +216,9 @@ body{
   .chat-footer button{
     border-radius: 15px;
   }
+  .users{
+    width: 320px;
+    height: 390px;
+    border-right: 5px solid black;
+  }
 }
