--- a/client/src/App.css
+++ b/client/src/App.css
@@ -101,7 +101,7 @@ body{
 #you {
   border-bottom: 3px solid rgb(25, 25, 25);
   padding: 5px;
-  display: inline-block;
+  display: block;
 }
 
 #other{
